<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_createBooking"
            android:icon="@drawable/ic_menu_booking"
            android:title="@string/book_a_car" />
        <item
            android:id="@+id/nav_bookingList"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/show_bookings" />
        <item
            android:id="@+id/nav_list_all"
            android:icon="@drawable/ic_menu_report_all"
            android:title="@string/menu_report_all" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favourites"/>

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>