<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="8dp"
    android:elevation="0dp">

    <RelativeLayout
        android:id="@+id/report_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/carBrandDisplay"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_toEndOf="@id/imageIcon"
            android:hint="@string/car_brand_hint"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/carModelDisplay"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_below="@+id/carBrandDisplay"
            android:layout_toEndOf="@id/imageIcon"
            android:hint="@string/car_model_hint"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/licensePlateDisplay"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/carModelDisplay"
            android:hint="@string/license_plate_hint"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/dateShown"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/licensePlateDisplay"
            android:hint="@string/dateHint"
            android:textColor="#000000"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imagefavourite"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_toEndOf="@id/dateShown"
            app:srcCompat="@android:drawable/star_big_off" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>