<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.activities.Login">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/bg1">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:layout_marginTop="50dp"
            android:text="@string/emailpassword_title_text"
            android:textColor="@color/colorBackground"
            android:theme="@style/ThemeOverlay.MyTitleText" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout">

        <LinearLayout
            android:id="@+id/emailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/fui_idp_button_background_email"
                android:drawableStart="@android:drawable/sym_action_email"
                android:gravity="center_vertical"
                android:paddingLeft="30dip"
                android:paddingRight="35dip"
                android:singleLine="true"
                android:text="@string/sign_in_email"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailButton"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/phoneSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/fui_idp_button_background_phone"
                android:drawableStart="@drawable/fui_ic_phone_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/sign_in_phone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:singleLine="true"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneButton"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/googleSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
                android:gravity="center_vertical"
                android:text="@string/sign_in_google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:singleLine="true"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
